<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".planillero.viewActivities.EditarCuenta.Fragment_Editar_Cuenta_Planillero">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <!-- Header TextView -->
        <TextView
            android:id="@+id/EditarPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Editar perfil"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
           />

        <!-- Foto del Planillero -->
        <ImageView
            android:id="@+id/FotoPlanillero"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_imagenes"
            android:src="@drawable/usuario2"
            android:clipToOutline="true"
            android:scaleType="centerCrop"
            android:elevation="4dp"
            app:layout_constraintTop_toBottomOf="@id/EditarPerfil"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Botón para eliminar la foto -->
        <ImageView
            android:id="@+id/BotonEliminarFotoPlanillero"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/borrargris"
            android:contentDescription="@string/eliminar"
            android:background="@drawable/radius_perfil_foto"
            android:elevation="4dp"
            app:layout_constraintBottom_toBottomOf="@id/FotoPlanillero"
            app:layout_constraintStart_toStartOf="@id/FotoPlanillero"/>

        <!-- Botón para añadir la foto -->
        <ImageView
            android:id="@+id/BotonAñadirFotoPlanillero"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ubicacion"
            android:contentDescription="@string/agregar"
            android:background="@drawable/radius_perfil_foto"
            android:elevation="4dp"
            app:layout_constraintBottom_toBottomOf="@id/FotoPlanillero"
            app:layout_constraintEnd_toEndOf="@id/FotoPlanillero"/>

        <!-- Botón para actualizar la foto -->
        <ImageView
            android:id="@+id/BotonActualizarFotoPlanillero"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/update"
            android:contentDescription="@string/agregar"
            android:background="@drawable/radius_perfil_foto"
            android:elevation="4dp"
            app:layout_constraintBottom_toBottomOf="@id/FotoPlanillero"
            app:layout_constraintEnd_toEndOf="@id/FotoPlanillero"/>

        <!-- Contenedor del formulario en CardView -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toBottomOf="@id/FotoPlanillero"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp">

            <!-- Contenido del formulario -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <EditText
                    android:drawablePadding="12dp"
                    android:id="@+id/editTextNombrePlanillero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/aaron"
                    android:background="@drawable/edit_text_background"
                    android:drawableStart="@drawable/ic_ful_name"
                    android:padding="12dp"/>

                <EditText
                    android:layout_marginTop="10dp"
                    android:drawablePadding="12dp"
                    android:id="@+id/editTextTelefonoPlanillero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/_57_31025796"
                    android:background="@drawable/edit_text_background"
                    android:drawableStart="@drawable/ic_num_telef"
                    android:padding="12dp"/>

                <EditText
                    android:layout_marginTop="10dp"
                    android:drawablePadding="12dp"
                    android:id="@+id/editTextCorreoPlanillero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/planillero"
                    android:background="@drawable/edit_text_background"
                    android:drawableStart="@drawable/ic_correo"
                    android:padding="12dp"/>

                <EditText
                    android:layout_marginTop="10dp"
                    android:drawablePadding="12dp"
                    android:id="@+id/editTextContraseñaPlanillero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contra"
                    android:background="@drawable/edit_text_background"
                    android:drawableStart="@drawable/ic_contrasena"
                    android:padding="12dp"/>

                <Button
                    android:id="@+id/BotonActualizarDatosPlanillero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:backgroundTint="#11A3BD"
                    android:text="Actualizar datos"
                    android:layout_marginTop="20dp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
